--- a/app/src/main/res/layout/list_item_view_multiple_type_list_type_a.xml
+++ b/app/src/main/res/layout/list_item_view_multiple_type_list_type_a.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="ヘッダー"
+        android:text="Type A"
         android:textColor="@android:color/black"
         android:textSize="24sp"
         android:gravity="center"
